sqlite/conformance/sqlite-sqltests/snapshot_tests/aggregation/snapshots/aggregation__aggregation-with-join.snap
---
source: aggregation.sqltest
expression: |-
  SELECT
          p.category,
          COUNT(o.order_id) as num_orders,
          SUM(o.total_amount) as total_revenue,
          AVG(o.quantity) as avg_quantity_per_order
      FROM
          products p
          LEFT JOIN orders o ON p.product_id = o.product_id
      GROUP BY
          p.category
      ORDER BY
          total_revenue DESC;
info:
  statement_type: SELECT
  tables:
  - orders
  - p.product_id
  - products
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
|--SCAN products AS p
|--SEARCH o USING INDEX idx_orders_product (product_id=?) LEFT-JOIN
|--USE SORTER FOR GROUP BY
`--USE SORTER FOR ORDER BY

BYTECODE
addr  opcode                    p1  p2  p3  p4                p5  comment
   0          Init               0  75   0                     0  Start at 75
   1          SorterOpen         0   1   0  k(1,-Binary)       0  cursor=0
   2          Null               0  11  13                     0  r[11..13]=NULL
   3          SorterOpen         1   4   0  k(1,-Binary)       0  cursor=1
   4          Integer            0   8   0                     0  r[8]=0; clear group by abort flag
   5          Null               0   9   0                     0  r[9]=NULL; initialize group by comparison registers to NULL
   6          Gosub             19  63   0                     0  ; go to clear accumulator subroutine
   7          OpenRead           3   6   0  k(4,B,B,B,B)       0  table=products, root=6, iDb=0
   8          OpenRead           4   7   0  k(6,B,B,B,B,B,B)   0  table=orders, root=7, iDb=0
   9          OpenRead           5   9   0  k(2,B)             0  index=idx_orders_product, root=9, iDb=0
  10          Rewind             3  29   0                     0  Rewind table products
  11            Integer          0  20   0                     0  r[20]=0
  12            RowId            3  21   0                     0  r[21]=products.rowid
  13            SeekGE           5  24  21                     0  key=[21..21]
  14              IdxGT          5  24  21                     0  key=[21..21]
  15              DeferredSeek   5   4   0                     0
  16              Integer        1  20   0                     0  r[20]=1
  17              Column         3   2  15                     0  r[15]=products.category
  18              IdxRowId       5  16   0                     0  r[16]=cursor 5 for index idx_orders_product.rowid
  19              Column         4   5  17                     0  r[17]=orders.total_amount
  20              Column         4   4  18                     0  r[18]=orders.quantity
  21              MakeRecord    15   4  14                     0  r[14]=mkrec(r[15..18])
  22              SorterInsert   1  14   0  0                  0  key=r[14]
  23            Next             5  14   0                     0
  24            IfPos           20  28   0                     0  r[20]>0 -> r[20]-=0, goto 28
  25            NullRow          4   0   0                     0  Set cursor 4 to a (pseudo) NULL row
  26            NullRow          5   0   0                     0  Set cursor 5 to a (pseudo) NULL row
  27            Goto             0  16   0                     0
  28          Next               3  11   0                     1
  29          OpenPseudo         2  14   4                     0  4 columns in r[14]
  30          SorterSort         1  47   0                     0
  31            SorterData       1  14   2                     0  r[14]=data
  32            Column           2   0  22                     0  r[22]=pseudo.column 0
  33            Compare          9  22   1  k(1, Binary)       0  r[9..9]==r[22..22]
  34            Jump            35  39  35                     0  ; start new group if comparison is not equal
  35            Gosub            6  51   0                     0  ; check if ended group had data, and output if so
  36            Move            22   9   1                     0  r[9..9]=r[22..22]
  37            IfPos            8  66   0                     0  r[8]>0 -> r[8]-=0, goto 66; check abort flag
  38            Gosub           19  63   0                     0  ; goto clear accumulator subroutine
  39            ColumnRange      2   1  23  3                  0  r[23..25]=pseudo.column 1..column 3
  40            AggStep          0  23  11  count              0  accum=r[11] step(r[23])
  41            AggStep          0  24  12  sum                0  accum=r[12] step(r[24])
  42            AggStep          0  25  13  avg                0  accum=r[13] step(r[25])
  43            If               7  45   0                     0  if r[7] goto 45; don't emit group columns if continuing existing group
  44            Column           2   0  10                     0  r[10]=pseudo.column 0
  45            Integer          1   7   0                     0  r[7]=1; indicate data in accumulator
  46          SorterNext         1  31   0                     0
  47          Gosub              6  51   0                     0  ; emit row for final group
  48          Goto               0  66   0                     0  ; group by finished
  49          Integer            1   8   0                     0  r[8]=1
  50        Return               6   0   0                     0
  51        IfPos                7  53   0                     0  r[7]>0 -> r[7]-=0, goto 53; output group by row subroutine start
  52      Return                 6   0   0                     0
  53      AggFinal               0  11   0  count              0  accum=r[11]
  54      AggFinal               0  12   0  sum                0  accum=r[12]
  55      AggFinal               0  13   0  avg                0  accum=r[13]
  56      Copy                  12  26   0                     0  r[26]=r[12]
  57      Copy                  10  27   0                     0  r[27]=r[10]
  58      Copy                  11  28   0                     0  r[28]=r[11]
  59      Copy                  13  29   0                     0  r[29]=r[13]
  60      MakeRecord            26   4   5                     0  r[5]=mkrec(r[26..29])
  61      SorterInsert           0   5   0  0                  0  key=r[5]
  62    Return                   6   0   0                     0
  63    Null                     0  10  13                     0  r[10..13]=NULL; clear accumulator subroutine start
  64    Integer                  0   7   0                     0  r[7]=0
  65  Return                    19   0   0                     0
  66  OpenPseudo                 6   5   4                     0  4 columns in r[5]
  67  SorterSort                 0  74   0                     0
  68    SorterData               0   5   6                     0  r[5]=data
  69    ColumnRange              6   1   1  2                  0  r[1..2]=pseudo.column 1..column 2
  70    Column                   6   0   3                     0  r[3]=pseudo.column 0
  71    Column                   6   3   4                     0  r[4]=pseudo.column 3
  72    ResultRow                1   4   0                     0  output=r[1..4]
  73  SorterNext                 0  68   0                     0
  74  Halt                       0   0   0                     0
  75  Transaction                0   1   8                     0  iDb=0 tx_mode=Read
  76  Goto                       0   1   0                     0
