sqlite/conformance/sqlite-sqltests/snapshot_tests/aggregation/snapshots/aggregation__column-free-scan-covering-index.snap
---
source: aggregation.sqltest
expression: SELECT 1 FROM indexed_count;
info:
  statement_type: SELECT
  tables:
  - indexed_count
  setup_blocks:
  - indexed_count_table
  database: ':memory:'
---
QUERY PLAN
`--SCAN indexed_count USING COVERING INDEX indexed_count_narrow_idx

BYTECODE
addr  opcode       p1  p2  p3  p4      p5  comment
   0  Init          0   6   0           0  Start at 6
   1  OpenRead      0   4   0  k(2,B)   0  index=indexed_count_narrow_idx, root=4, iDb=0
   2  Rewind        0   5   0           0  Rewind index indexed_count_narrow_idx
   3    ResultRow   1   1   0           0  output=r[1]
   4  Next          0   3   0           1
   5  Halt          0   0   0           0
   6  Transaction   0   1   4           0  iDb=0 tx_mode=Read
   7  Integer       1   1   0           0  r[1]=1
   8  Goto          0   1   0           0
