sqlite/conformance/sqlite-sqltests/snapshot_tests/aggregation/snapshots/aggregation__count-distinct.snap
---
source: aggregation.sqltest
expression: |-
  SELECT
          category,
          COUNT(DISTINCT salesperson_id) as unique_salespeople,
          COUNT(DISTINCT region) as unique_regions
      FROM
          sales
      GROUP BY
          category
      ORDER BY
          unique_salespeople DESC;
info:
  statement_type: SELECT
  tables:
  - sales
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
|--SCAN sales USING INDEX idx_sales_category
|--USE HASH TABLE FOR count(DISTINCT)
|--USE HASH TABLE FOR count(DISTINCT)
`--USE SORTER FOR ORDER BY

BYTECODE
addr  opcode                          p1  p2  p3  p4                  p5  comment
   0          Init                     0  57   0                       0  Start at 57
   1          SorterOpen               0   1   0  k(1,-Binary)         0  cursor=0
   2          Null                     0  10  11                       0  r[10..11]=NULL
   3          Integer                  0   7   0                       0  r[7]=0; clear group by abort flag
   4          Null                     0   8   0                       0  r[8]=NULL; initialize group by comparison registers to NULL
   5          Gosub                   16  43   0                       0  ; go to clear accumulator subroutine
   6          HashClear       1073741824   0   0                       0
   7          HashClear       1073741825   0   0                       0
   8          OpenRead                 1   2   0  k(7,B,B,B,B,B,B,B)   0  table=sales, root=2, iDb=0
   9          OpenRead                 2   4   0  k(2,B)               0  index=idx_sales_category, root=4, iDb=0
  10          Rewind                   2  29   0                       0  Rewind index idx_sales_category
  11            DeferredSeek           2   1   0                       0
  12            Column                 2   0  13                       0  r[13]=idx_sales_category.category
  13            Column                 1   6  14                       0  r[14]=sales.salesperson_id
  14            Column                 1   2  15                       0  r[15]=sales.region
  15            Compare                8  13   1  k(1, Binary)         0  r[8..8]==r[13..13]
  16            Jump                  17  21  17                       0  ; start new group if comparison is not equal
  17            Gosub                  5  33   0                       0  ; check if ended group had data, and output if so
  18            Move                  13   8   1                       0  r[8..8]=r[13..13]
  19            IfPos                  7  48   0                       0  r[7]>0 -> r[7]-=0, goto 48; check abort flag
  20            Gosub                 16  43   0                       0  ; goto clear accumulator subroutine
  21            HashDistinct  1073741824  14   1  jmp=23               0
  22            AggStep                0  14  10  count                0  accum=r[10] step(r[14])
  23            HashDistinct  1073741825  15   1  jmp=25               0
  24            AggStep                0  15  11  count                0  accum=r[11] step(r[15])
  25            If                     6  27   0                       0  if r[6] goto 27; don't emit group columns if continuing existing group
  26            Column                 2   0   9                       0  r[9]=idx_sales_category.category
  27            Integer                1   6   0                       0  r[6]=1; indicate data in accumulator
  28          Next                     2  11   0                       1
  29          Gosub                    5  33   0                       0  ; emit row for final group
  30          Goto                     0  48   0                       0  ; group by finished
  31          Integer                  1   7   0                       0  r[7]=1
  32        Return                     5   0   0                       0
  33        IfPos                      6  35   0                       0  r[6]>0 -> r[6]-=0, goto 35; output group by row subroutine start
  34      Return                       5   0   0                       0
  35      AggFinal                     0  10   0  count                0  accum=r[10]
  36      AggFinal                     0  11   0  count                0  accum=r[11]
  37      Copy                        10  17   0                       0  r[17]=r[10]
  38      Copy                         9  18   0                       0  r[18]=r[9]
  39      Copy                        11  19   0                       0  r[19]=r[11]
  40      MakeRecord                  17   3   4                       0  r[4]=mkrec(r[17..19])
  41      SorterInsert                 0   4   0  0                    0  key=r[4]
  42    Return                         5   0   0                       0
  43    Null                           0   9  11                       0  r[9..11]=NULL; clear accumulator subroutine start
  44    HashClear             1073741824   0   0                       0
  45    HashClear             1073741825   0   0                       0
  46    Integer                        0   6   0                       0  r[6]=0
  47  Return                          16   0   0                       0
  48  OpenPseudo                       3   4   3                       0  3 columns in r[4]
  49  SorterSort                       0  56   0                       0
  50    SorterData                     0   4   3                       0  r[4]=data
  51    Column                         3   1   1                       0  r[1]=pseudo.column 1
  52    Column                         3   0   2                       0  r[2]=pseudo.column 0
  53    Column                         3   2   3                       0  r[3]=pseudo.column 2
  54    ResultRow                      1   3   0                       0  output=r[1..3]
  55  SorterNext                       0  50   0                       0
  56  Halt                             0   0   0                       0
  57  Transaction                      0   1   8                       0  iDb=0 tx_mode=Read
  58  Goto                             0   1   0                       0
