sqlite/conformance/sqlite-sqltests/snapshot_tests/aggregation/snapshots/aggregation__distinct-count-with-join.snap
---
source: aggregation.sqltest
expression: |-
  SELECT
          p.category,
          COUNT(DISTINCT o.customer_id) as unique_customers,
          COUNT(DISTINCT o.order_id) as total_orders
      FROM
          products p
          INNER JOIN orders o ON p.product_id = o.product_id
      GROUP BY
          p.category
      ORDER BY
          unique_customers DESC;
info:
  statement_type: SELECT
  tables:
  - orders
  - p.product_id
  - products
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
|--SCAN orders AS o
|--SEARCH p USING INTEGER PRIMARY KEY (rowid=?)
|--USE SORTER FOR GROUP BY
|--USE HASH TABLE FOR count(DISTINCT)
|--USE HASH TABLE FOR count(DISTINCT)
`--USE SORTER FOR ORDER BY

BYTECODE
addr  opcode                          p1  p2  p3  p4                p5  comment
   0          Init                     0  67   0                     0  Start at 67
   1          SorterOpen               0   1   0  k(1,-Binary)       0  cursor=0
   2          Null                     0  10  11                     0  r[10..11]=NULL
   3          SorterOpen               1   3   0  k(1,-Binary)       0  cursor=1
   4          Integer                  0   7   0                     0  r[7]=0; clear group by abort flag
   5          Null                     0   8   0                     0  r[8]=NULL; initialize group by comparison registers to NULL
   6          Gosub                   16  53   0                     0  ; go to clear accumulator subroutine
   7          HashClear       1073741824   0   0                     0
   8          HashClear       1073741825   0   0                     0
   9          OpenRead                 3   6   0  k(4,B,B,B,B)       0  table=products, root=6, iDb=0
  10          OpenRead                 4   7   0  k(6,B,B,B,B,B,B)   0  table=orders, root=7, iDb=0
  11          Rewind                   4  20   0                     0  Rewind table orders
  12            Column                 4   2  17                     0  r[17]=orders.product_id
  13            SeekRowid              3  17  19                     0  if (r[17]!=cursor 3 for table products.rowid) goto 19
  14            Column                 3   2  13                     0  r[13]=products.category
  15            Column                 4   1  14                     0  r[14]=orders.customer_id
  16            RowId                  4  15   0                     0  r[15]=orders.rowid
  17            MakeRecord            13   3  12                     0  r[12]=mkrec(r[13..15])
  18            SorterInsert           1  12   0  0                  0  key=r[12]
  19          Next                     4  12   0                     1
  20          OpenPseudo               2  12   3                     0  3 columns in r[12]
  21          SorterSort               1  39   0                     0
  22            SorterData             1  12   2                     0  r[12]=data
  23            Column                 2   0  18                     0  r[18]=pseudo.column 0
  24            Compare                8  18   1  k(1, Binary)       0  r[8..8]==r[18..18]
  25            Jump                  26  30  26                     0  ; start new group if comparison is not equal
  26            Gosub                  5  43   0                     0  ; check if ended group had data, and output if so
  27            Move                  18   8   1                     0  r[8..8]=r[18..18]
  28            IfPos                  7  58   0                     0  r[7]>0 -> r[7]-=0, goto 58; check abort flag
  29            Gosub                 16  53   0                     0  ; goto clear accumulator subroutine
  30            ColumnRange            2   1  19  2                  0  r[19..20]=pseudo.column 1..column 2
  31            HashDistinct  1073741824  19   1  jmp=33             0
  32            AggStep                0  19  10  count              0  accum=r[10] step(r[19])
  33            HashDistinct  1073741825  20   1  jmp=35             0
  34            AggStep                0  20  11  count              0  accum=r[11] step(r[20])
  35            If                     6  37   0                     0  if r[6] goto 37; don't emit group columns if continuing existing group
  36            Column                 2   0   9                     0  r[9]=pseudo.column 0
  37            Integer                1   6   0                     0  r[6]=1; indicate data in accumulator
  38          SorterNext               1  22   0                     0
  39          Gosub                    5  43   0                     0  ; emit row for final group
  40          Goto                     0  58   0                     0  ; group by finished
  41          Integer                  1   7   0                     0  r[7]=1
  42        Return                     5   0   0                     0
  43        IfPos                      6  45   0                     0  r[6]>0 -> r[6]-=0, goto 45; output group by row subroutine start
  44      Return                       5   0   0                     0
  45      AggFinal                     0  10   0  count              0  accum=r[10]
  46      AggFinal                     0  11   0  count              0  accum=r[11]
  47      Copy                        10  21   0                     0  r[21]=r[10]
  48      Copy                         9  22   0                     0  r[22]=r[9]
  49      Copy                        11  23   0                     0  r[23]=r[11]
  50      MakeRecord                  21   3   4                     0  r[4]=mkrec(r[21..23])
  51      SorterInsert                 0   4   0  0                  0  key=r[4]
  52    Return                         5   0   0                     0
  53    Null                           0   9  11                     0  r[9..11]=NULL; clear accumulator subroutine start
  54    HashClear             1073741824   0   0                     0
  55    HashClear             1073741825   0   0                     0
  56    Integer                        0   6   0                     0  r[6]=0
  57  Return                          16   0   0                     0
  58  OpenPseudo                       5   4   3                     0  3 columns in r[4]
  59  SorterSort                       0  66   0                     0
  60    SorterData                     0   4   5                     0  r[4]=data
  61    Column                         5   1   1                     0  r[1]=pseudo.column 1
  62    Column                         5   0   2                     0  r[2]=pseudo.column 0
  63    Column                         5   2   3                     0  r[3]=pseudo.column 2
  64    ResultRow                      1   3   0                     0  output=r[1..3]
  65  SorterNext                       0  60   0                     0
  66  Halt                             0   0   0                     0
  67  Transaction                      0   1   8                     0  iDb=0 tx_mode=Read
  68  Goto                             0   1   0                     0
