sqlite/conformance/sqlite-sqltests/snapshot_tests/aggregation/snapshots/aggregation__min-max-per-group.snap
---
source: aggregation.sqltest
expression: |-
  SELECT
          category,
          MIN(amount) as min_sale,
          MAX(amount) as max_sale
      FROM
          sales
      GROUP BY
          category
      ORDER BY
          category;
info:
  statement_type: SELECT
  tables:
  - sales
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
`--SCAN sales USING INDEX idx_sales_category

BYTECODE
addr  opcode                  p1  p2  p3  p4                  p5  comment
   0          Init             0  41   0                       0  Start at 41
   1          Null             0   9  10                       0  r[9..10]=NULL
   2          Integer          0   6   0                       0  r[6]=0; clear group by abort flag
   3          Null             0   7   0                       0  r[7]=NULL; initialize group by comparison registers to NULL
   4          Gosub           15  37   0                       0  ; go to clear accumulator subroutine
   5          OpenRead         0   2   0  k(7,B,B,B,B,B,B,B)   0  table=sales, root=2, iDb=0
   6          OpenRead         1   4   0  k(2,B)               0  index=idx_sales_category, root=4, iDb=0
   7          Rewind           1  24   0                       0  Rewind index idx_sales_category
   8            DeferredSeek   1   0   0                       0
   9            Column         1   0  12                       0  r[12]=idx_sales_category.category
  10            Column         0   4  13                       0  r[13]=sales.amount
  11            Column         0   4  14                       0  r[14]=sales.amount
  12            Compare        7  12   1  k(1, Binary)         0  r[7..7]==r[12..12]
  13            Jump          14  18  14                       0  ; start new group if comparison is not equal
  14            Gosub          4  28   0                       0  ; check if ended group had data, and output if so
  15            Move          12   7   1                       0  r[7..7]=r[12..12]
  16            IfPos          6  40   0                       0  r[6]>0 -> r[6]-=0, goto 40; check abort flag
  17            Gosub         15  37   0                       0  ; goto clear accumulator subroutine
  18            AggStep        0  13   9  min(Binary)          0  accum=r[9] step(r[13])
  19            AggStep        0  14  10  max(Binary)          0  accum=r[10] step(r[14])
  20            If             5  22   0                       0  if r[5] goto 22; don't emit group columns if continuing existing group
  21            Column         1   0   8                       0  r[8]=idx_sales_category.category
  22            Integer        1   5   0                       0  r[5]=1; indicate data in accumulator
  23          Next             1   8   0                       1
  24          Gosub            4  28   0                       0  ; emit row for final group
  25          Goto             0  40   0                       0  ; group by finished
  26          Integer          1   6   0                       0  r[6]=1
  27        Return             4   0   0                       0
  28        IfPos              5  30   0                       0  r[5]>0 -> r[5]-=0, goto 30; output group by row subroutine start
  29      Return               4   0   0                       0
  30      AggFinal             0   9   0  min                  0  accum=r[9]
  31      AggFinal             0  10   0  max                  0  accum=r[10]
  32      Copy                 8   1   0                       0  r[1]=r[8]
  33      Copy                 9   2   0                       0  r[2]=r[9]
  34      Copy                10   3   0                       0  r[3]=r[10]
  35      ResultRow            1   3   0                       0  output=r[1..3]
  36    Return                 4   0   0                       0
  37    Null                   0   8  10                       0  r[8..10]=NULL; clear accumulator subroutine start
  38    Integer                0   5   0                       0  r[5]=0
  39  Return                  15   0   0                       0
  40  Halt                     0   0   0                       0
  41  Transaction              0   1   8                       0  iDb=0 tx_mode=Read
  42  Goto                     0   1   0                       0
