sqlite/conformance/sqlite-sqltests/snapshot_tests/aggregation/snapshots/aggregation__multi-column-group-by.snap
---
source: aggregation.sqltest
expression: |-
  SELECT
          category,
          region,
          SUM(amount) as total_sales,
          COUNT(*) as num_transactions
      FROM
          sales
      GROUP BY
          category,
          region
      ORDER BY
          category,
          region;
info:
  statement_type: SELECT
  tables:
  - sales
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
`--SCAN sales USING INDEX idx_sales_category_region

BYTECODE
addr  opcode                  p1  p2  p3  p4                    p5  comment
   0          Init             0  41   0                         0  Start at 41
   1          Null             0  12  13                         0  r[12..13]=NULL
   2          Integer          0   7   0                         0  r[7]=0; clear group by abort flag
   3          Null             0   8   9                         0  r[8..9]=NULL; initialize group by comparison registers to NULL
   4          Gosub           18  37   0                         0  ; go to clear accumulator subroutine
   5          OpenRead         0   2   0  k(7,B,B,B,B,B,B,B)     0  table=sales, root=2, iDb=0
   6          OpenRead         1   5   0  k(3,B,B)               0  index=idx_sales_category_region, root=5, iDb=0
   7          Rewind           1  23   0                         0  Rewind index idx_sales_category_region
   8            DeferredSeek   1   0   0                         0
   9            ColumnRange    1   0  15  2                      0  r[15..16]=idx_sales_category_region.category..region
  10            Column         0   4  17                         0  r[17]=sales.amount
  11            Compare        8  15   2  k(2, Binary, Binary)   0  r[8..9]==r[15..16]
  12            Jump          13  17  13                         0  ; start new group if comparison is not equal
  13            Gosub          5  27   0                         0  ; check if ended group had data, and output if so
  14            Move          15   8   2                         0  r[8..9]=r[15..16]
  15            IfPos          7  40   0                         0  r[7]>0 -> r[7]-=0, goto 40; check abort flag
  16            Gosub         18  37   0                         0  ; goto clear accumulator subroutine
  17            AggStep        0  17  12  sum                    0  accum=r[12] step(r[17])
  18            AggStep        0  19  13  count                  0  accum=r[13] step(r[19])
  19            If             6  21   0                         0  if r[6] goto 21; don't emit group columns if continuing existing group
  20            ColumnRange    1   0  10  2                      0  r[10..11]=idx_sales_category_region.category..region
  21            Integer        1   6   0                         0  r[6]=1; indicate data in accumulator
  22          Next             1   8   0                         1
  23          Gosub            5  27   0                         0  ; emit row for final group
  24          Goto             0  40   0                         0  ; group by finished
  25          Integer          1   7   0                         0  r[7]=1
  26        Return             5   0   0                         0
  27        IfPos              6  29   0                         0  r[6]>0 -> r[6]-=0, goto 29; output group by row subroutine start
  28      Return               5   0   0                         0
  29      AggFinal             0  12   0  sum                    0  accum=r[12]
  30      AggFinal             0  13   0  count                  0  accum=r[13]
  31      Copy                10   1   0                         0  r[1]=r[10]
  32      Copy                11   2   0                         0  r[2]=r[11]
  33      Copy                12   3   0                         0  r[3]=r[12]
  34      Copy                13   4   0                         0  r[4]=r[13]
  35      ResultRow            1   4   0                         0  output=r[1..4]
  36    Return                 5   0   0                         0
  37    Null                   0  10  13                         0  r[10..13]=NULL; clear accumulator subroutine start
  38    Integer                0   6   0                         0  r[6]=0
  39  Return                  18   0   0                         0
  40  Halt                     0   0   0                         0
  41  Transaction              0   1   8                         0  iDb=0 tx_mode=Read
  42  Integer                  1  19   0                         0  r[19]=1
  43  Goto                     0   1   0                         0
